@@ -113,6 +113,9 @@
             with revision control.  At Perl Training Australia we use git
             for new projects, and so we rename this to <em>.gitignore</em>.
             </p>
+            <p>
+            (As of version 1.52, this file is now called "ignores.txt", so you can use it however you like.)
+            </p>
             </dd>
             <dt><strong>Changes</strong></dt>
 
