@@ -2,9 +2,15 @@ Revision history for Perl extension Module::Starter
 
 NEXT
         * Support for more licenses.  Thanks to Shlomi Fish.
+
         * Fix slashing problems for Windows.  Thanks Olivier Mengué.
+
         * Complains about extra unparsed options to try to detect
         problems that come out of misquoted variables. Thanks to Gunnar Wolf.
+
+        * The list of files to ignore is now called ignores.txt,
+        which you can turn into .cvsignore, .gitignore, MANIFEST.SKIP
+        or whatever.
 
 
 1.50    Tue Oct 28 00:27:37 CDT 2008
